# video-inspector

./: .gitignore  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: README.md  release-version.cjs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  download-ffmpeg.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: inspector.rs  lib.rs  logging.rs  main.rs
src/components/LanguageSwitcher/: LanguageSwitcher.tsx
src/components/Video/: Video.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
