[package]
name = "video-inspector"
version = "0.2.3"
description = "A desktop application for quickly viewing video file metadata and thumbnails."
authors = ["arichyx@qq.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "video_inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-next = "7.1.0"
base64 = "0.22.1"
image = { version = "0.25.6", features = ["png"] }
thiserror = "2.0.12"
tauri-plugin-dialog = "2"
# Logging dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }
dirs = "6.0"
tauri-plugin-shell = "2"

